src/content/docs/sdk/ios/v4/features/deep-links/direct-zh.mdx
---
title: 设置直接深度链接
description: 为您的应用配置直接深度链接。
slug: zh/sdk/ios/v4/features/deep-links/direct
sidebar-position: 3
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /zh/sdk/ios/features/deep-links/direct
---

在 Adjust 控制面板中完成设置后，您就可以在应用中配置深度链接。如果用户的设备上已经安装了应用，就会发生 **直接深度链接** 。该链接会将用户转到应用内的特定界面。

要启用深度链接，请进行下列操作：

-  [ ] 为您的应用启用 Associated Domain \(关联域\)
-  [ ] 在 Xcode 中配置您的深度链接

## Enable Associated Domains {#enable-associated-domains}

开始设置时，请在 Apple Developer 账户中启用 Associated Domain \(关联域\)，这样，您就能在应用中设置通用链接域了。为此，请按照以下步骤操作：

1. 登录 [Apple Developer 账户](https://developer.apple.com/account/)。
2. 从左侧菜单中选择 **Certificates, IDs & Profiles** 。
3. 从左侧菜单中选择 **Identifiers** 。
4. 找到并选中您的应用，打开编辑界面。
5. 确保勾选 **Capabilities** 下的 **Associated Domains** 。
6. 点击 **保存** ，保存变更。

## Configure deep links in Xcode {#configure-deep-links-in-xcode}

按照下方步骤操作，在您的 Xcode 项目中添加深度链接配置。

### Adjust universal links domain {#adjust-universal-links-domain}

1. 使用 XCode 打开您的应用项目。
2. 从左侧菜单中选择您的项目。
3. 在 **Targets** 中选择您的应用。
4. 从顶部菜单中选择 **Signing & Capabilities** 。
5. 确保在下方子菜单中选定 **All** 。
6. 选择添加选项 \( **\+** 图标\) 添加功能。
7. 选择 **Associated Domains** 。
8. 填写带有前缀的 Adjust 通用链接域名 `applinks:`
   -  `example.adj.st` 域使用示例：`applinks:example.adj.st`。

### Custom URL scheme {#custom-url-scheme}

<Callout type="tip">

请咨询您的营销团队，决定是否需要自定义 URL 方案，并讨论方案名称。如果您的应用还定向安卓设备，则为每个平台使用相同的方案名。

</Callout>

1. 使用 XCode 打开您的应用项目。
2. 从左侧菜单中选择您的项目。
3. 在 **Targets** 中选择您的应用。
4. 从顶部菜单中选择 **Info** 。
5. 展开 **URL Types** 板块。
6. 选择添加选项 \( **\+** 图标\) 添加 URL 类别。
7. 输入下列信息，以创建 URL 方案：
   -  **标识符** ： `$(PRODUCT_BUNDLE_IDENTIFIER)`
   -  **URL 方案** ：您的自定义 URL 方案。该方案必须是唯一的。请勿使用受保护的方案，如 `http`，`https` 或 `mailto`。
   -  **角色** ：编辑员

该方案适用于您的生产版本 **和** 调试版本。

## Modify your iOS app {#modify-your-ios-app}

要设置不同的深度链接场景，您需要先更新 iOS 应用。具体应用更新方式取决于您的应用是否使用[场景](https://developer.apple.com/documentation/uikit/app_and_environment/scenes)。

### App doesn't use scenes {#app-doesn-t-use-scenes}

如果您的应用不使用场景，请在应用委托中更新方法。

#### Universal links {#universal-links}

请在应用委托中更新 `application(_:continue:restorationHandler:)` 方法，调用 Adjust SDK 中的下列方法：

-  `ADJLinkResolution.resolveLink`: Call this method only if your marketing team requires the use of Adjust's Link Resolution solution. If the deep link uses a domain that matches an element in the `resolveUrlSuffixArray`, then the method attempts to resolve the deep link, and returns the resolved link. If the deep link doesn't match an element in this array, then the method passes through the original deep link, so you can pass all deep links to this method.
-  `Adjust.appWillOpen` 调用该方法，向 Adjust 服务器发送深度链接，用于记录信息。Adjust 和非 Adjust 深度链接均可以发送给该方法。Adjust 服务器会忽略不包含 Adjust 参数的所有深度链接。

无论用户是否已经关闭应用，或应用是否在后台运行，只要用户点击您的通用链接，iOS 就会打开您的应用，将深度链接传送至 `application(_:continue:restorationHandler:)`。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(
    _ application: UIApplication,
    continue userActivity: NSUserActivity,
    restorationHandler: @escaping ([UIUserActivityRestoring]?) -> Void)
    -> Bool {

    if userActivity.activityType == NSUserActivityTypeBrowsingWeb {
        let incomingURL = userActivity.webpageURL

        // call the below method to resolve deep link
        ADJLinkResolution.resolveLink(
        withUrl: incomingURL,
        resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
        callback: { resolvedURL in
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            Adjust.appWillOpen(resolvedURL)
        })
      } else {
          return false
      }

      return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)application:(UIApplication *)application
    continueUserActivity:(NSUserActivity *)userActivity
    restorationHandler:
    (void (^)(NSArray *restorableObjects))restorationHandler {

    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    } else {
        return NO;
    }

    return YES;
}
```

</Tab>
</Tabs>

#### Custom URL scheme {#custom-url-scheme-1}

如果营销团队要求您设置自定义 URL 方案深度链接，请更新应用委托中的 `application(_:open:options:)` 方法，在 Adjust SDK 中调用 `Adjust.appWillOpen` 方法。该方法会将深度链接发送至 Adjust 后台用于记录。Adjust 和非 Adjust 深度链接均可以发送给该方法。Adjust 会忽略不包含 Adjust 参数的所有深度链接。

无论用户是否已经关闭应用，或应用是否在后台运行，只要用户点击自定义 URL 方案深度链接，iOS 就会打开您的应用，将深度链接传送至 `application(_:open:options:)`。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func application(
    _ app: UIApplication,
    open incomingURL: URL,
    options: [UIApplication.OpenURLOptionsKey: Any] = [:]
    ) -> Bool {

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    Adjust.appWillOpen(incomingURL)

    return true
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (BOOL)application:(UIApplication *)app
    openURL:(NSURL *)incomingURL
    options:(NSDictionary *)options {

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    [Adjust appWillOpenUrl:incomingURL];

    return YES;
}
```

</Tab>
</Tabs>

### App uses scenes {#app-uses-scenes}

如果您的应用使用场景，请在场景委托中更新方法。

#### Universal links {#universal-links-1}

1. 在 scene delegate \(场景委托\) 中更新 `scene(_:willConnectTo:options:)` 方法。如果用户在已关闭应用的前提下点击通用链接，那么 iOS 就会打开应用，将深度链接传递给该方法。
2. 在 scene delegate \(场景委托\) 中更新 `scene(_:continue:)` 方法。如果用户在应用后台运行的前提下点击通用链接，那么 iOS 就会打开应用，将深度链接传递给该方法。

上述方法会调用 Adjust SDK 中的下列方法：

-  `ADJLinkResolution.resolveLink`: Call this method only if your marketing team requires the use of Adjust's Link Resolution solution. If the deep link uses a domain that matches an element in the `resolveUrlSuffixArray`, then the method attempts to resolve the deep link, and returns the resolved link. If the deep link doesn't match an element in this array, then the method passes through the original deep link, so you can pass all deep links to this method.
-  `Adjust.appWillOpen` \- 调用该方法，向 Adjust 服务器发送深度链接，用于记录信息。Adjust 和非 Adjust 深度链接均可以发送给该方法。Adjust 服务器会忽略不包含 Adjust 参数的所有深度链接。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func scene(
    _ scene: UIScene,
    willConnectTo session: UISceneSession,
    options connectionOptions: UIScene.ConnectionOptions
    ) {

    guard let userActivity = connectionOptions.userActivities.first,
      userActivity.activityType == NSUserActivityTypeBrowsingWeb,
      let incomingURL = userActivity.webpageURL
    else { return }

    // call the below method to resolve deep link
    ADJLinkResolution.resolveLink(
      withUrl: incomingURL,
      resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
      callback: { resolvedURL in
        // add your code below to handle deep link
        // (for example, open deep link content)
        // resolvedURL object contains the deep link


        // call the below method to send deep link to Adjust's servers
        Adjust.appWillOpen(resolvedURL)
      })
}

func scene(
    _ scene: UIScene,
    continue userActivity: NSUserActivity) {

    if userActivity.activityType == NSUserActivityTypeBrowsingWeb {
        let incomingURL = userActivity.webpageURL

        // call the below method to resolve deep link
        ADJLinkResolution.resolveLink(
        withUrl: incomingURL,
        resolveUrlSuffixArray: ["email.example.com", "short.example.com"],
        callback: { resolvedURL in
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            Adjust.appWillOpen(resolvedURL)
        })
    }
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (void)scene:(UIScene *)scene willConnectToSession:(UISceneSession *)session
    options:(UISceneConnectionOptions *)connectionOptions {

    NSUserActivity* userActivity =
    [[[connectionOptions userActivities] allObjects] firstObject];

    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    }
}

- (void)scene:(UIScene *)scene continueUserActivity:(NSUserActivity *)userActivity{
    if ([[userActivity activityType]
        isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        NSURL *incomingURL = [userActivity webpageURL];

        // call the below method to resolve deep link
        [ADJLinkResolution
        resolveLinkWithUrl:incomingURL
        resolveUrlSuffixArray:@[
        @"email.example.com", @"short.example.com"
        ]
        callback:^(NSURL* _Nullable resolvedURL) {
            // add your code below to handle deep link
            // (for example, open deep link content)
            // resolvedURL object contains the deep link


            // call the below method to send deep link to Adjust's servers
            [Adjust appWillOpenUrl:resolvedURL];
        }];
    }
}
```

</Tab>
</Tabs>

#### Custom URL scheme {#custom-url-scheme-2}

1. 在 scene delegate \(场景委托\) 中更新 `scene(_:willConnectTo:options:)` 方法。如果用户在已关闭应用的前提下点击自定义 URL 方案深度链接，那么 iOS 就会打开应用，将深度链接传递给该方法。
2. 在 scene delegate \(场景委托\) 中更新 `scene(_:openURLContexts:)` 方法。如果用户在应用后台运行的前提下点击自定义 URL 方案深度链接，那么 iOS 就会打开应用，将深度链接传递给该方法。

这些方法会在 Adjust SDK 中调用 `Adjust.appWillOpen` 方法。该方法会将深度链接发送至 Adjust 后台用于记录。Adjust 和非 Adjust 深度链接均可以发送给该方法。Adjust 会忽略不包含 Adjust 参数的所有深度链接。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
func scene(
    _ scene: UIScene,
    openURLContexts URLContexts: Set<uiopenurlcontext>
    ) {

    guard let incomingURL = URLContexts.first?.url else {
        return
    }

    // add your code below to handle deep link
    // (for example, open deep link content)
    // incomingURL object contains the deep link


    // call the below method to send deep link to Adjust's servers
    Adjust.appWillOpen(incomingURL)
}
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
- (void)scene:(UIScene *)scene
    openURLContexts:(nonnull NSSet<uiopenurlcontext *> *)URLContexts {

    NSURL *incomingURL = [[URLContexts allObjects] firstObject].URL;

    if (incomingURL) {
        // add your code below to handle deep link
        // (for example, open deep link content)
        // incomingURL object contains the deep link


        // call the below method to send deep link to Adjust's servers
        [Adjust appWillOpenUrl:incomingURL];
    }
}
```

</Tab>
</Tabs>
